--- a/app/templates/causes/cause_form.html
+++ b/app/templates/causes/cause_form.html
@@ -2,27 +2,27 @@
 {% set active_page = "cause" %}
 
 {% block content %}
-    {% from "helpers/forms.html" import render_field, render_boolean, render_f %}
+    {% from "helpers/forms.html" import render_field, render_boolean %}
     <form id="cause" name="cause" action="" method="post">
         {{ form.hidden_tag() }}
         <div class="row">
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_f(form.title, "u-full-width") }}
-                    {{ render_f(form.intro, "u-full-width")  }}
+                    {{ render_field(form.title, "u-full-width") }}
+                    {{ render_field(form.intro, "u-full-width")  }}
                 </div>
             </fieldset>
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_f(form.boss, "u-full-width") }}
-                    {{ render_f(form.location, "u-full-width")  }}
-                    {{ render_f(form.image, "u-full-width")  }}
+                    {{ render_field(form.boss, "u-full-width") }}
+                    {{ render_field(form.location, "u-full-width")  }}
+                    {{ render_field(form.image, "u-full-width")  }}
                 </div>
             </fieldset>
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_f(form.story_heading, "u-full-width") }}
-                    {{ render_f(form.story_content, "u-full-width")  }}
+                    {{ render_field(form.story_heading, "u-full-width") }}
+                    {{ render_field(form.story_content, "u-full-width")  }}
                 </div>
             </fieldset>
         </div>
