--- a/app/templates/posts/post_form.html
+++ b/app/templates/posts/post_form.html
@@ -3,18 +3,18 @@
 
 {% block content %}
 <div class="container u-add-margin-top">
-    {% from "helpers/forms.html" import render_field, render_boolean, render_f %}
+    {% from "helpers/forms.html" import render_field, render_boolean %}
     <form id="post" name="post" action="" method="post">
         {{ form.hidden_tag() }}
         <div class="row">
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_f(form.title, "u-full-width") }}
+                    {{ render_field(form.title, class="u-full-width") }}
                 </div>
             </fieldset>
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_f(form.body, "u-full-width")  }}
+                    {{ render_field(form.body, class="u-full-width")  }}
                 </div>
             </fieldset>
         </div>
