--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -62,6 +62,9 @@
                         <a id="stand-with-us" 
                            class="button button-primary hero-button" 
                            href="{{ url_for('causes.cause_support', slug=cause.slug) }}">Stand with us!</a>
+                       <span>
+                           Join this cause's community, and stay updated on actions
+                       </span>
                     {% endif %}
                 </div>
             </div>
