--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -23,26 +23,19 @@ $(document).ready(function() {
             <fieldset>
                 <div class="six columns offset-by-three">
                     {{ render_field(
-                        form.email(**{
-                            'class':'u-full-width',
-                            'data-validation':'email', 
-                            'data-validation-error-msg-container':'#form-email-error',
-                            'data-validation-error-msg':'Incorrect'
-                        }), 
-                        form.email.label,
-                        form.email.flags
-                       ) 
-                    }}
+                        form.email,
+                        class='u-full-width',
+                        data_validation='email', 
+                        data_validation_error_msg_container='#form-email-error',
+                        data_validation_error_msg='Incorrect'
+                    ) }}
                     {{ render_field(
-                        form.password(**{
-                            'class':'u-full-width',
-                            'data-validation':'required',
-                            'data-validation-error-msg-container':'#form-password-error',
-                            'data-validation-error-msg':'Required'}),
-                        form.password.label,
-                        form.password.flags
-                       ) 
-                    }}
+                        form.password,
+                        class='u-full-width',
+                        data_validation='required',
+                        data_validation_error_msg_container='#form-password-error',
+                        data_validation_error_msg='Required'
+                    ) }}
                     {{ render_boolean(form.remember) }}
                 </div>
             </fieldset>
