--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,6 @@
             <div class="row">
                 <div class="twelve columns">
                     <a class="u-link-color-override" href="{{ url_for('index') }}">
-                        <!--<img class="logo img-circle u-pull-left" src="{{ url_for('static', filename='images/logo_128x128.png') }}">-->
                         <h4 class="title u-pull-left"><strong>SOLID</strong></h4>
                     </a>
                     {% if current_user.is_admin %}
@@ -63,7 +62,9 @@
                             <a href="{{ url_for('users.signup') }}" title="Sign Up" class="button button-primary u-pull-right">Sign Up</a>
                         {% endif %}
                     {% else %}
-                            <a href="{{ url_for('users.signup') }}" title="Sign Up" class="button u-pull-right">Sign Up</a>
+                            <a href="{{ url_for('users.login') }}" title="Log In" class="button u-pull-right">
+                                <img src="{{ url_for('static', filename='open-iconic/png/account-login-2x.png') }}">
+                            </a>
                     {% endif %}
                 </div>
             </div>
