Display "signup" on login and "login" on signup

--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% set active_page = "login" %}
+{% set active_page = "signup" %}
 
 {% block scripts %}
 <script type="text/javascript" src="{{ url_for('static', filename='jQuery-Form-Validator/form-validator/jquery.form-validator.min.js') }}"></script>
