--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,7 +44,14 @@
                     {% if current_user.is_admin %}
                     <a href="{{ url_for('admin.admin') }}" title="Admin" class="button u-pull-right u-add-margin-left">Admin</a>
                     {% endif %}
-                    {% if active_page != "login" %}
+                    {% if active_page == "login" %}
+                        <a href="{{ url_for('users.signup') }}" title="Sign Up"
+                            class="button u-pull-right">Sign Up</a>
+                    {% elif active_page == "signup" %}
+                        <a href="{{ url_for('users.login') }}" title="Log In" class="button u-pull-right">
+                            <img src="{{ url_for('static', filename='open-iconic/png/account-login-2x.png') }}">
+                        </a>
+                    {% else %}
                         {% if current_user.is_authenticated %} 
                             <a href="{{ url_for('users.logout') }}" title="Log Out" class="button u-pull-right">
                                 <img src="{{ url_for('static', filename='open-iconic/png/account-logout-2x.png') }}">
@@ -61,10 +68,6 @@
                             </a>
                             <a href="{{ url_for('users.signup') }}" title="Sign Up" class="button button-primary u-pull-right">Sign Up</a>
                         {% endif %}
-                    {% else %}
-                            <a href="{{ url_for('users.login') }}" title="Log In" class="button u-pull-right">
-                                <img src="{{ url_for('static', filename='open-iconic/png/account-login-2x.png') }}">
-                            </a>
                     {% endif %}
                 </div>
             </div>
