--- a/app/templates/users/index.html
+++ b/app/templates/users/index.html
@@ -19,9 +19,10 @@
             {% endif %}
             <h5 class="u-remove-margin-bottom">{{ user.full_name }}</h5>
             {% if current_user == user or current_user.is_admin %}
-            {% if user.email %}<div>{{ user.email }}</div>{% endif %}
-            {% if user.phone %}<div>{{ user.phone }}</div>{% endif %}
-            {% if user.zip %}<div>{{ user.zip }}</div>{% endif %}
+                <em>(Other users won't see these details)</em>
+                {% if user.email %}<div>{{ user.email }}</div>{% endif %}
+                {% if user.phone %}<div>{{ user.phone }}</div>{% endif %}
+                {% if user.zip %}<div>{{ user.zip }}</div>{% endif %}
             {% endif %}
         </div>
         <div class="six columns">
@@ -30,9 +31,16 @@
                 <li><strong>{{ post.title }}</strong> by <em>{{ post.author.nickname }}</em><br>{{ post.body }}</li>
             {% else %}
                 <li>
-                    <em>There's nothing to show here yet!
-                    <a href="{{ url_for('index') }}">Support a cause</a> to see
-                    a feed of recent discussion on this page.</em>
+                    <em>
+                        There's nothing to show here yet.<br>
+                        {% if current_user == user %}
+                            Start a discussion on one of the causes you're
+                            supporting so that others can see it here.
+                        {% else %}
+                            When this user participates in a discussion, you'll
+                            see it here!
+                        {% endif %}
+                    </em>
                 </li>
             {% endfor %}
             </ul>
@@ -58,7 +66,7 @@
                 <li>
                     <strong>{{ action.title }}</strong> <em>{{ action.cause.title }}</em>
                     <br>
-                    {{ action.description }}
+                    {{ action.summary }}
                 </li>
             {% endfor %}    
             </ul>
