Fixed syntax error in profile edit form. My bad.

--- a/app/templates/users/edit.html
+++ b/app/templates/users/edit.html
@@ -34,10 +34,10 @@
                 {{ render_field(form.phone, class='u-full-width') }}
                 {{ render_field(form.zip, 
                     class='u-full-width',
-                    data-validation='custom',
-                    data-validation-regexp='^[0-9]{5}$',
-                    data-validation-error-msg-container='#form-zip-container',
-                    data-validation-error-msg='Incorrect'
+                    data_validation='custom',
+                    data_validation_regexp='^[0-9]{5}$',
+                    data_validation_error_msg_container='#form-zip-container',
+                    data_validation_error_msg='Incorrect'
                 ) }}
                 {{ render_field(form.employer, class='u-full-width') }}
                 {{ render_field(form.description, class='u-full-width') }}
