Add localhost twitter keys & hide footer social

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -108,12 +108,12 @@
                     </ul>
                 </div>
                 {% endif %}
-                <div class="three columns">
+                <!--<div class="three columns">
                     <h4>Follow Us</h4>
                     <a href="#"><img class="icon-social" src="{{ url_for('static', filename='icons/twitter.png') }}"></a>
                     <a href="#"><img class="icon-social" src="{{ url_for('static', filename='icons/reddit.png') }}"></a>
                     <a href="#"><img class="icon-social" src="{{ url_for('static', filename='icons/facebook-square.png') }}"></a>
-                </div>
+                </div>-->
             </div>
             <hr>
             <div class="row">
