--- a/app/templates/users/index.html
+++ b/app/templates/users/index.html
@@ -17,7 +17,9 @@
             {% if current_user == user or current_user.is_admin %}
                 <a href="{{ url_for('users.edit', nickname=user.nickname) }}" class="button u-pull-right u-remove-margin-top">Edit</a>
             {% endif %}
-            <h5 class="u-remove-margin-bottom">{{ user.full_name }}</h5>
+            {% if user.full_name %}
+                <h5 class="u-remove-margin-bottom">{{ user.full_name }}</h5>
+            {% endif %}
             {% if current_user == user or current_user.is_admin %}
                 <em>(Other users won't see these details)</em>
                 {% if user.email %}<div>{{ user.email }}</div>{% endif %}
