--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -14,6 +14,7 @@
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/modal.js') }}"></script>
+<script src="{{ url_for('static', filename='jquery.lazy/jquery.lazy.min.js') }}"></script>
 <script>
     $(document).ready(function() {
         $('#stand-with-us').click(function() {
@@ -43,7 +44,7 @@
 {% from "helpers/modals.html" import render_modal %}
 {% from "helpers/users.html" import render_avatar %}
 {% from "helpers/posts.html" import render_post_list %}
-<div class="section hero">
+<div class="section hero lazy" data-src="{{ url_for('static', filename=cause.image) }}">
     <div class="full-width-container">
         <div class="row">
             <div class="twelve columns">
