--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -14,38 +14,26 @@
             <fieldset>
                 <div class="six columns offset-by-three">
                     {{ render_field(
-                        form.name(**{
-                            'class':'u-full-width',
-                            'data-validation':'required', 
-                            'data-validation-error-msg-container':'#form-name-error',
-                            'data-validation-error-msg':'Required'
-                        }), 
-                        form.name.label,
-                        form.name.flags
-                       ) 
-                    }}
+                        form.name,
+                        class='u-full-width',
+                        data_validation='required', 
+                        data_validation_error_msg_container='#form-name-error',
+                        data_validation_error_msg='Required'
+                    ) }}
                     {{ render_field(
-                        form.email(**{
-                            'class':'u-full-width',
-                            'data-validation':'email', 
-                            'data-validation-error-msg-container':'#form-email-error',
-                            'data-validation-error-msg':'incorrect'
-                        }), 
-                        form.email.label,
-                        form.email.flags
-                       ) 
-                    }}
+                        form.email,
+                        class='u-full-width',
+                        data_validation='email', 
+                        data_validation_error_msg_container='#form-email-error',
+                        data_validation_error_msg='incorrect'
+                    ) }}
                     {{ render_field(
-                        form.message(**{
-                            'class':'u-full-width',
-                            'data-validation':'required', 
-                            'data-validation-error-msg-container':'#form-message-error',
-                            'data-validation-error-msg':'Required'
-                        }), 
-                        form.message.label,
-                        form.message.flags
-                       ) 
-                    }}
+                        form.message,
+                        class='u-full-width',
+                        data_validation='required', 
+                        data_validation_error_msg_container='#form-message-error',
+                        data_validation_error_msg='Required'
+                    ) }}
                     {{ render_boolean(form.send_to_self) }}
                 </div>
             </fieldset>
