--- a/app/templates/posts/post_list.html
+++ b/app/templates/posts/post_list.html
@@ -13,7 +13,7 @@
 </div>
 <hr class="u-remove-margin-bottom">
 
-<div class="row">
+<div class="row u-add-margin-top">
     {{ render_post_list(cause) }}
 </div>
 {% endblock %}
