--- a/app/templates/causes/cause_form.html
+++ b/app/templates/causes/cause_form.html
@@ -8,21 +8,21 @@
         <div class="row">
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_field(form.title, "u-full-width") }}
-                    {{ render_field(form.intro, "u-full-width")  }}
+                    {{ render_field(form.title, class="u-full-width") }}
+                    {{ render_field(form.intro, class="u-full-width")  }}
                 </div>
             </fieldset>
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_field(form.boss, "u-full-width") }}
-                    {{ render_field(form.location, "u-full-width")  }}
-                    {{ render_field(form.image, "u-full-width")  }}
+                    {{ render_field(form.boss, class="u-full-width") }}
+                    {{ render_field(form.location, class="u-full-width")  }}
+                    {{ render_field(form.image, class="u-full-width")  }}
                 </div>
             </fieldset>
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_field(form.story_heading, "u-full-width") }}
-                    {{ render_field(form.story_content, "u-full-width")  }}
+                    {{ render_field(form.story_heading, class="u-full-width") }}
+                    {{ render_field(form.story_content, class="u-full-width")  }}
                 </div>
             </fieldset>
         </div>
